--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   zwave:
     container_name: zwave
-    image: zwavejs/zwavejs2mqtt:stable
+    image: zwavejs/zwave-js-ui:latest
     restart: always
     tty: true
     stop_signal: SIGINT
@@ -14,7 +14,7 @@ services:
     networks:
       - zwave
     devices:
-      - "/dev/zstick:/dev/zwave"
+      - "/dev/serial/by-id/usb-0658_0200-if00:/dev/zwave"
     volumes:
       - zwave-config:/usr/src/app/store
     ports:
@@ -22,7 +22,7 @@ services:
       - '3000:3000' # port for Z-Wave JS websocket server
   homeassistant:
     container_name: homeassistant
-    image: "ghcr.io/home-assistant/raspberrypi3-homeassistant:old"
+    image: "ghcr.io/home-assistant/raspberrypi3-homeassistant:stable"
     environment:
       - TZ=${TZ}
     volumes:
@@ -32,18 +32,18 @@ services:
     privileged: true
     network_mode: host
 
-  netdaemon:
-    image: netdaemon/netdaemon3
-    container_name: netdaemon
-    restart: always
-    environment:
-      - HomeAssistant__Host=hass
-      - HomeAssistant__Token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiI2MWMwY2ViYWQzMjA0NWEzODcxZTAzMTkzYzE3Nzk0ZCIsImlhdCI6MTY1NTE4OTQ5MSwiZXhwIjoxOTcwNTQ5NDkxfQ.mZ7u7CMykxa2IaaNBQJLFXRpnthJKFMTQ2Q-Yn-0ncw
-      - NetDaemon__ApplicationAssembly=NetDaemonApps.dll
-      - Logging__LogLevel__Default=Information  # use Information/Debug/Trace/Warning/Error
-      - TZ=${TZ}
-    volumes:
-      - netdaemon-config:/data
+  # netdaemon:
+  #   image: netdaemon/netdaemon3
+  #   container_name: netdaemon
+  #   restart: always
+  #   environment:
+  #     - HomeAssistant__Host=hass
+  #     - HomeAssistant__Token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiI2MWMwY2ViYWQzMjA0NWEzODcxZTAzMTkzYzE3Nzk0ZCIsImlhdCI6MTY1NTE4OTQ5MSwiZXhwIjoxOTcwNTQ5NDkxfQ.mZ7u7CMykxa2IaaNBQJLFXRpnthJKFMTQ2Q-Yn-0ncw
+  #     - NetDaemon__ApplicationAssembly=NetDaemonApps.dll
+  #     - Logging__LogLevel__Default=Information  # use Information/Debug/Trace/Warning/Error
+  #     - TZ=${TZ}
+  #   volumes:
+  #     - netdaemon-config:/data
 
 networks:
   zwave:
@@ -55,18 +55,18 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/home/pi/hassconfig/zwaveconfig'
+      device: '/home/pi/hass/zwaveconfig'
   hass-config:
     name: hass-config
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/home/pi/hassconfig'
+      device: '/home/pi/hass'
   netdaemon-config:
     name: netdaemon-config
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/home/pi/hassconfig/netdaemon'
+      device: '/home/pi/hass/netdaemon'
