--- a/compose.yaml
+++ b/compose.yaml
@@ -28,7 +28,7 @@ services:
     volumes:
       - hass-config:/config
       - /etc/localtime:/etc/localtime:ro
-    restart: unless-stopped
+    restart: always
     privileged: true
     network_mode: host
 
